styles/style.css
/* ... */
@media only screen and (max-width: 480px) {
  .movie-main {
    padding: 100px 24px 0;
  }
  footer figure img {
    display: none;
  }
  footer figure {
    position: relative;
    background-image: url("/public/mobile-bottom-shape.svg");
    height: 100px;
    background-size: cover;
    background-repeat: no-repeat;
  }
  .movie-main.movie-list-screen {
    padding: 80px 24px 50px;
  }
  .cmovie-main h4 {
    font-size: 32px;
  }
  .movie-main.create-movie {
    padding: 80px 24px;
  }
}

@media only screen and (max-width: 393px) {
  .cmovie-main .cmovie-fold .action-btn button {
    width: 48%;
    padding: 15px;
  }
}

@media only screen and (max-width: 375px) {
  .movie-main .auth-screen .auth-title {
    font-size: 44px;
    line-height: 52px;
  }
  .ml-body .ml-lists .ml-list-item figure {
    position: relative;
    height: 160px;
  }
  .movie-list-screen .ml-main .ml-header {
    margin-bottom: 60px;
  }
  .ml-lists .ml-list-item .mdetail h5 {
    font-size: 16px;
    line-height: 20px;
    margin-bottom: 10px;
  }
  .cmovie-main .cmovie-fold .upload-img {
    height: 300px;
  }
}

